corrected some alignment using bootstrap

--- a/src/pages/Home/Heading.css
+++ b/src/pages/Home/Heading.css
@@ -27,9 +27,6 @@
   width:368px;
   height:50px;
 }
-  
-
-
 
 .newCollection img {
   width: 200px; /* Adjust the width to your preference */
@@ -77,14 +74,11 @@
     margin: 0;
     text-align: left;
   }
-  .home-btn{
-
-    padding: 10px 20px;
-    
+  .home-btn{   
     border: none;
     cursor: pointer;
     font-size: 16px;
-    margin-top: 100px;
+    margin-top: 45px;
   }
   button {
    
